<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/curIn"
        android:layout_width="357dp"
        android:layout_height="82dp"
        android:autofillHints=""
        android:inputType="text"
        android:textAlignment="center"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.441" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.02676399" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.98053527" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.32" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.97" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sine"
        android:textAllCaps="false"
        android:textSize="24dp"
        app:layout_constraintBottom_toTopOf="@+id/ButtonbracO"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/guidelineC"
        tools:ignore="SpUsage"
        tools:targetApi="p" />

    <Button
        android:id="@+id/Button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:text="@string/_3"

        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/result"
        app:layout_constraintEnd_toStartOf="@+id/ButtonSub"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/Button2"
        app:layout_constraintTop_toBottomOf="@+id/Button6"
        tools:targetApi="p" />

    <Button
        android:id="@+id/ButtonAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:text="@string/Add"

        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/ButtonMul"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/Button9"
        app:layout_constraintTop_toBottomOf="@+id/Buttonclr"
        tools:targetApi="p" />

    <Button
        android:id="@+id/ButtonMul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:text="@string/multiply"

        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/ButtonSub"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/Button6"
        app:layout_constraintTop_toBottomOf="@+id/ButtonAdd"
        tools:targetApi="p" />

    <Button
        android:id="@+id/Button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:text="@string/_1"

        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/Buttondec"
        app:layout_constraintEnd_toStartOf="@+id/Button2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/Button4"
        tools:targetApi="p" />

    <Button
        android:id="@+id/ButtonDiv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:text="@string/division"

        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonsqrt"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/result"
        app:layout_constraintTop_toBottomOf="@+id/ButtonSub"
        tools:targetApi="p" />

    <Button
        android:id="@+id/pwr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:text="@string/power"

        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/Button9"
        app:layout_constraintEnd_toStartOf="@+id/Buttonclr"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/ButtonbracC"
        app:layout_constraintTop_toBottomOf="@+id/button3"
        tools:targetApi="p" />

    <Button
        android:id="@+id/Button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:text="@string/_8"

        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/Button5"
        app:layout_constraintEnd_toStartOf="@+id/Button9"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/Button7"
        app:layout_constraintTop_toBottomOf="@+id/ButtonbracC"
        tools:targetApi="p" />

    <Button
        android:id="@+id/Button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:text="@string/_2"

        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/Button0"
        app:layout_constraintEnd_toStartOf="@+id/Button3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/Button1"
        app:layout_constraintTop_toBottomOf="@+id/Button5"
        tools:targetApi="p" />

    <Button
        android:id="@+id/Button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:text="@string/_9"

        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/Button6"
        app:layout_constraintEnd_toStartOf="@+id/ButtonAdd"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/Button8"
        app:layout_constraintTop_toBottomOf="@+id/pwr"
        tools:targetApi="p" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/del"
        android:textAllCaps="false"
        android:textSize="24dp"
        app:layout_constraintBottom_toTopOf="@+id/Buttonclr"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintTop_toBottomOf="@+id/guidelineC"
        tools:ignore="SpUsage"
        tools:targetApi="p" />

    <Button
        android:id="@+id/Button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:text="@string/_4"

        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/Button1"
        app:layout_constraintEnd_toStartOf="@+id/Button5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/Button7"
        tools:targetApi="p" />

    <Button
        android:id="@+id/Button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:text="@string/Six"

        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/Button3"
        app:layout_constraintEnd_toStartOf="@+id/ButtonMul"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/Button5"
        app:layout_constraintTop_toBottomOf="@+id/Button9"
        tools:targetApi="p" />

    <Button
        android:id="@+id/ButtonbracO"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_bracket_open"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/Button7"
        app:layout_constraintEnd_toStartOf="@+id/ButtonbracC"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/button"
        tools:targetApi="p" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tan"
        android:textAllCaps="false"
        android:textSize="24dp"
        app:layout_constraintBottom_toTopOf="@+id/pwr"
        app:layout_constraintEnd_toStartOf="@+id/button4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/guidelineC"
        tools:ignore="SpUsage"
        tools:targetApi="p" />

    <Button
        android:id="@+id/Buttonclr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:text="@string/pi"
        android:textAllCaps="false"

        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/ButtonAdd"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/pwr"
        app:layout_constraintTop_toBottomOf="@+id/button4"
        tools:targetApi="p" />

    <Button
        android:id="@+id/Button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:text="@string/_7"

        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/Button4"
        app:layout_constraintEnd_toStartOf="@+id/Button8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/ButtonbracO"
        tools:targetApi="p" />

    <Button
        android:id="@+id/ButtonbracC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:text="@string/bracket_Close"

        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/Button8"
        app:layout_constraintEnd_toStartOf="@+id/pwr"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/ButtonbracO"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        tools:targetApi="p" />

    <Button
        android:id="@+id/Button0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:text="@string/_0"

        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonlog"
        app:layout_constraintEnd_toStartOf="@+id/result"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/Buttondec"
        app:layout_constraintTop_toBottomOf="@+id/Button2"
        tools:targetApi="p" />

    <Button
        android:id="@+id/Buttondec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:text="@string/dot"

        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonclr"
        app:layout_constraintEnd_toStartOf="@+id/Button0"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/Button1"
        tools:targetApi="p" />

    <Button
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:text="@string/equals"

        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonexp"
        app:layout_constraintEnd_toStartOf="@+id/ButtonDiv"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/Button0"
        app:layout_constraintTop_toBottomOf="@+id/Button3"
        tools:targetApi="p" />

    <Button
        android:id="@+id/Button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:text="@string/_5"

        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/Button2"
        app:layout_constraintEnd_toStartOf="@+id/Button6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/Button4"
        app:layout_constraintTop_toBottomOf="@+id/Button8"
        tools:targetApi="p" />

    <Button
        android:id="@+id/ButtonSub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:text="@string/substract"

        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/ButtonDiv"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/Button3"
        app:layout_constraintTop_toBottomOf="@+id/ButtonMul"
        tools:targetApi="p" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:text="@string/cosine"
        android:textAllCaps="false"

        android:textSize="24dp"
        app:layout_constraintBottom_toTopOf="@+id/ButtonbracC"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/guidelineC"
        tools:ignore="SpUsage"
        tools:targetApi="p" />

    <ToggleButton
        android:id="@+id/buttonclr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOff="@string/rad"
        android:textOn="@string/degree"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@id/guideline4"
        app:layout_constraintEnd_toStartOf="@+id/buttonlog"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/Buttondec"
        tools:targetApi="p" />

    <Button
        android:id="@+id/buttonlog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logb"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@id/guideline4"
        app:layout_constraintEnd_toStartOf="@+id/buttonexp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonclr"
        app:layout_constraintTop_toBottomOf="@+id/Button0"
        tools:targetApi="p" />

    <Button
        android:id="@+id/buttonexp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exp"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@id/guideline4"
        app:layout_constraintEnd_toStartOf="@+id/buttonsqrt"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonlog"
        app:layout_constraintTop_toBottomOf="@+id/result"
        tools:targetApi="p" />

    <Button
        android:id="@+id/buttonsqrt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:text="@string/sqrt"
        android:textAllCaps="false"

        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@id/guideline4"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/buttonexp"
        app:layout_constraintTop_toBottomOf="@+id/ButtonDiv"
        tools:targetApi="p" />


</androidx.constraintlayout.widget.ConstraintLayout>